--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.2"
+    "react-native": "0.61.2",
+    "react-native-animate-loading-button": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
