--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,7 +26,8 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0"
+    "react-test-renderer": "18.1.0",
+    "tailwindcss": "^3.2.1"
   },
   "jest": {
     "preset": "react-native"
